tests/dependancies/bad/missing_mod/missing_module/missing_module.rs
/*
Should be called mod.rs to work
*/